Test case for gcj/295.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35352 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-30  Anthony Green  <green@redhat.com>
+
+	* libjava.compile/PR295.java: New file.
+	See PR gcj/295.
+
 2000-07-11  Andrew Haley  <aph@cygnus.com>
 
 	* libjava.compile/static_init2.java: New file.
