* gcc.dg/c90-digraph-1.c: Don't xfail.         * gcc.dg/compare2.c (case 10): Xfail.         * gcc.dg/noncompile/redecl-1.c: Fix expected error message.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35357 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2000-07-30  Richard Henderson  <rth@cygnus.com>
+
+	* gcc.dg/c90-digraph-1.c: Don't xfail.
+	* gcc.dg/compare2.c (case 10): Xfail.
+	* gcc.dg/noncompile/redecl-1.c: Fix expected error message.
+
 2000-07-27  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* gcc.dg/c99-main-1.c: New test.
