--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -8327,27 +8327,32 @@
 ;; This is all complicated by the fact that since this is a jump insn
 ;; we must handle our own reloads.
 
-(define_expand "decrement_and_branch_on_count"
-  [(parallel [(set (pc) (if_then_else
-			  (ne (match_operand:SI 0 "register_operand" "")
-			      (const_int 1))
-			  (label_ref (match_operand 1 "" ""))
-			  (pc)))
-	      (set (match_dup 0)
-		   (plus:SI (match_dup 0)
-			    (const_int -1)))
-	      (clobber (match_scratch:SI 2 ""))
-	      (clobber (reg:CC 17))])]
+(define_expand "doloop_end"
+  [(use (match_operand 0 "" ""))        ; loop pseudo
+   (use (match_operand 1 "" ""))        ; iterations; zero if unknown
+   (use (match_operand 2 "" ""))        ; max iterations
+   (use (match_operand 3 "" ""))        ; loop level 
+   (use (match_operand 4 "" ""))]       ; label
   "TARGET_USE_LOOP"
-  "")
+  "                                 
+{
+  /* Only use cloop on innermost loops.  */
+  if (INTVAL (operands[3]) > 1)
+    FAIL;
+  if (GET_MODE (operands[0]) != SImode)
+    FAIL;
+  emit_jump_insn (gen_doloop_end_internal (operands[4], operands[0],
+					   operands[0]));
+  DONE;
+}")
 
-(define_insn "*dbra_ne"
+(define_insn "doloop_end_internal"
   [(set (pc)
-	(if_then_else (ne (match_operand:SI 1 "register_operand" "c,*r,*r")
+	(if_then_else (ne (match_operand:SI 1 "register_operand" "c,?*r,?*r")
 			  (const_int 1))
 		      (label_ref (match_operand 0 "" ""))
 		      (pc)))
-   (set (match_operand:SI 2 "register_operand" "=1,*r,*m*r")
+   (set (match_operand:SI 2 "register_operand" "=1,1,*m*r")
 	(plus:SI (match_dup 1)
 		 (const_int -1)))
    (clobber (match_scratch:SI 3 "=X,X,r"))
@@ -8372,55 +8377,24 @@
 		      (const_string "ibr")
 		      (const_string "multi")))])
 
-(define_insn "*dbra_ge"
-  [(set (pc)
-	(if_then_else (ge (match_operand:SI 1 "register_operand" "c,*r,*r")
-			  (const_int 0))
-		      (label_ref (match_operand 0 "" ""))
-		      (pc)))
-   (set (match_operand:SI 2 "register_operand" "=1,*r,*m*r")
-	(plus:SI (match_dup 1)
-		 (const_int -1)))
-   (clobber (match_scratch:SI 3 "=X,X,r"))
-   (clobber (reg:CC 17))]
-  "TARGET_USE_LOOP && find_reg_note (insn, REG_NONNEG, 0)"
-  "*
-{
-  if (which_alternative != 0)
-    return \"#\";
-  if (get_attr_length (insn) == 2)
-    return \"loop\\t%l0\";
-  else
-    return \"dec{l}\\t%1\;jne\\t%l0\";
-}"
-  [(set (attr "type")
-	(if_then_else (and (eq_attr "alternative" "0")
-			   (and (ge (minus (match_dup 0) (pc))
-			            (const_int -128))
-			        (lt (minus (match_dup 0) (pc))
-			            (const_int 124))))
-		      (const_string "ibr")
-		      (const_string "multi")))
-   (set_attr "ppro_uops" "many")])
-
 (define_split
   [(set (pc)
 	(if_then_else (ne (match_operand:SI 1 "register_operand" "")
 			  (const_int 1))
 		      (match_operand 0 "" "")
 		      (pc)))
-   (set (match_operand:SI 2 "register_operand" "")
+   (set (match_dup 1)
 	(plus:SI (match_dup 1)
 		 (const_int -1)))
-   (clobber (match_scratch:SI 3 ""))
+   (clobber (match_scratch:SI 2 ""))
    (clobber (reg:CC 17))]
-  "TARGET_USE_LOOP && reload_completed
-   && ! (REGNO (operands[1]) == 2 && rtx_equal_p (operands[1], operands[2]))"
-  [(set (match_dup 2) (match_dup 1))
-   (parallel [(set (reg:CCZ 17)
-		   (compare:CCZ (plus:SI (match_dup 2) (const_int -1))
+  "TARGET_USE_LOOP
+   && reload_completed
+   && REGNO (operands[1]) != 2"
+  [(parallel [(set (reg:CCZ 17)
+		   (compare:CCZ (plus:SI (match_dup 1) (const_int -1))
 				 (const_int 0)))
-	      (set (match_dup 2) (plus:SI (match_dup 2) (const_int -1)))])
+	      (set (match_dup 1) (plus:SI (match_dup 1) (const_int -1)))])
    (set (pc) (if_then_else (ne (reg:CCZ 17) (const_int 0))
 			   (match_dup 0)
 			   (pc)))]
@@ -8432,12 +8406,15 @@
 			  (const_int 1))
 		      (match_operand 0 "" "")
 		      (pc)))
-   (set (match_operand:SI 2 "memory_operand" "")
+   (set (match_operand:SI 2 "nonimmediate_operand" "")
 	(plus:SI (match_dup 1)
 		 (const_int -1)))
    (clobber (match_scratch:SI 3 ""))
    (clobber (reg:CC 17))]
-  "TARGET_USE_LOOP && reload_completed"
+  "TARGET_USE_LOOP
+   && reload_completed
+   && (! REG_P (operands[2])
+       || ! rtx_equal_p (operands[1], operands[2]))"
   [(set (match_dup 3) (match_dup 1))
    (parallel [(set (reg:CCZ 17)
 		   (compare:CCZ (plus:SI (match_dup 3) (const_int -1))
@@ -8445,52 +8422,6 @@
 	      (set (match_dup 3) (plus:SI (match_dup 3) (const_int -1)))])
    (set (match_dup 2) (match_dup 3))
    (set (pc) (if_then_else (ne (reg:CCZ 17) (const_int 0))
-			   (match_dup 0)
-			   (pc)))]
-  "")
-
-(define_split
-  [(set (pc)
-	(if_then_else (ge (match_operand:SI 1 "register_operand" "")
-			  (const_int 0))
-		      (match_operand 0 "" "")
-		      (pc)))
-   (set (match_operand:SI 2 "register_operand" "")
-	(plus:SI (match_dup 1)
-		 (const_int -1)))
-   (clobber (match_scratch:SI 3 ""))
-   (clobber (reg:CC 17))]
-  "TARGET_USE_LOOP && reload_completed
-   && ! (REGNO (operands[1]) == 2 && rtx_equal_p (operands[1], operands[2]))"
-  [(set (match_dup 2) (match_dup 1))
-   (parallel [(set (reg:CCNO 17)
-		   (compare:CCNO (plus:SI (match_dup 2) (const_int -1))
-				 (const_int 0)))
-	      (set (match_dup 2) (plus:SI (match_dup 2) (const_int -1)))])
-   (set (pc) (if_then_else (lt (reg:CCNO 17) (const_int 0))
-			   (match_dup 0)
-			   (pc)))]
-  "")
-  
-(define_split
-  [(set (pc)
-	(if_then_else (ge (match_operand:SI 1 "register_operand" "")
-			  (const_int 0))
-		      (match_operand 0 "" "")
-		      (pc)))
-   (set (match_operand:SI 2 "memory_operand" "")
-	(plus:SI (match_dup 1)
-		 (const_int -1)))
-   (clobber (match_scratch:SI 3 ""))
-   (clobber (reg:CC 17))]
-  "TARGET_USE_LOOP && reload_completed"
-  [(set (match_dup 3) (match_dup 1))
-   (parallel [(set (reg:CCNO 17)
-		   (compare:CCNO (plus:SI (match_dup 3) (const_int -1))
-				 (const_int 0)))
-	      (set (match_dup 3) (plus:SI (match_dup 3) (const_int -1)))])
-   (set (match_dup 2) (match_dup 3))
-   (set (pc) (if_then_else (lt (reg:CCNO 17) (const_int 0))
 			   (match_dup 0)
 			   (pc)))]
   "")
