--- a/gcc/config/ia64/ia64.md
+++ b/gcc/config/ia64/ia64.md
@@ -368,10 +368,12 @@
 (define_insn ""
   [(cond_exec
      (match_operator 2 "predicate_operator"
-       [(match_operand:CC 3 "register_operand" "c,c,c,c,c,c,c,c")
+       [(match_operand:CC 3 "register_operand" "c,c,c,c,c,c,c,c,c,c")
         (const_int 0)])
-     (set (match_operand:DI 0 "register_operand"  "=r,r,r, r,*f,*f, r,*b")
-	  (match_operand:DI 1 "nonmemory_operand" "rO,J,i,*f,rO,*f,*b,rO")))]
+     (set (match_operand:DI 0 "register_operand"
+			      "=r,r,r, r,*f,*f,   r,*b*e, r,*d")
+	  (match_operand:DI 1 "nonmemory_operand"
+			      "rO,J,i,*f,rO,*f,*b*e,  rO,*d,rO")))]
   "TARGET_A_STEP && ia64_move_ok (operands[0], operands[1])"
   "*
 {
@@ -382,6 +384,8 @@
     \"(%J2) getf.sig %0 = %1\",
     \"(%J2) setf.sig %0 = %r1\",
     \"(%J2) mov %0 = %1\",
+    \"(%J2) mov %0 = %1\",
+    \"(%J2) mov %0 = %r1\",
     \"(%J2) mov %0 = %1\",
     \"(%J2) mov %0 = %r1\"
   };
@@ -403,14 +407,14 @@
 
   return alt[which_alternative];
 }"
-  [(set_attr "type" "A,A,L,M,M,F,I,I")
+  [(set_attr "type" "A,A,L,M,M,F,I,I,M,M")
    (set_attr "predicable" "no")])
 
 (define_insn "*movdi_internal_astep"
   [(set (match_operand:DI 0 "destination_operand"
-			    "=r,r,r,r, m, r,*f,*f,*f, Q, r,*b")
+			    "=r,r,r,r, m, r,*f,*f,*f, Q,   r,*b*e, r,*d")
 	(match_operand:DI 1 "move_operand"
-			    "rO,J,i,m,rO,*f,rO,*f, Q,*f,*b,rO"))]
+			    "rO,J,i,m,rO,*f,rO,*f, Q,*f,*b*e,  rO,*d,rO"))]
   "TARGET_A_STEP && ia64_move_ok (operands[0], operands[1])"
   "*
 {
@@ -426,6 +430,8 @@
     \"ldf8 %0 = %1%P1\",
     \"stf8 %0 = %1%P0\",
     \"mov %0 = %1\",
+    \"mov %0 = %r1\",
+    \"mov %0 = %1\",
     \"mov %0 = %r1\"
   };
 
@@ -435,14 +441,14 @@
 
   return alt[which_alternative];
 }"
-  [(set_attr "type" "A,A,L,M,M,M,M,F,M,M,I,I")
+  [(set_attr "type" "A,A,L,M,M,M,M,F,M,M,I,I,M,M")
    (set_attr "predicable" "no")])
 
 (define_insn "*movdi_internal"
   [(set (match_operand:DI 0 "destination_operand"
-			    "=r,r,r,r, m, r,*f,*f,*f, Q, r,*b")
+			    "=r,r,r,r, m, r,*f,*f,*f, Q,   r,*b*e, r,*d")
 	(match_operand:DI 1 "move_operand"
-			    "rO,J,i,m,rO,*f,rO,*f, Q,*f,*b,rO"))]
+			    "rO,J,i,m,rO,*f,rO,*f, Q,*f,*b*e,  rO,*d,rO"))]
   "! TARGET_A_STEP && ia64_move_ok (operands[0], operands[1])"
   "*
 {
@@ -458,6 +464,8 @@
     \"%,ldf8 %0 = %1%P1\",
     \"%,stf8 %0 = %1%P0\",
     \"%,mov %0 = %1\",
+    \"%,mov %0 = %r1\",
+    \"%,mov %0 = %1\",
     \"%,mov %0 = %r1\"
   };
 
@@ -467,7 +475,7 @@
 
   return alt[which_alternative];
 }"
-  [(set_attr "type" "A,A,L,M,M,M,M,F,M,M,I,I")])
+  [(set_attr "type" "A,A,L,M,M,M,M,F,M,M,I,I,M,M")])
 
 (define_split
   [(set (match_operand:DI 0 "register_operand" "")
@@ -1104,6 +1112,15 @@
   "add %0 = %1, %2, 1"
   [(set_attr "type" "A")])
 
+(define_insn "*addsi3_plus1_alt"
+  [(set (match_operand:SI 0 "register_operand" "=r")
+	(plus:SI (mult:SI (match_operand:SI 1 "register_operand" "r")
+			  (const_int 2))
+		 (const_int 1)))]
+  ""
+  "add %0 = %1, %1, 1"
+  [(set_attr "type" "A")])
+
 (define_expand "subsi3"
   [(set (match_operand:SI 0 "register_operand" "")
 	(minus:SI (match_operand:SI 1 "reg_or_8bit_operand" "")
@@ -1297,6 +1314,18 @@
 		 (const_int 1)))]
   ""
   "add %0 = %1, %2, 1"
+  [(set_attr "type" "A")])
+
+;; This has some of the same problems as shladd.  We let the shladd
+;; eliminator hack handle it, which results in the 1 being forced into
+;; a register, but not more ugliness here.
+(define_insn "*adddi3_plus1_alt"
+  [(set (match_operand:DI 0 "register_operand" "=r")
+	(plus:DI (mult:DI (match_operand:DI 1 "register_operand" "r")
+			  (const_int 2))
+		 (const_int 1)))]
+  ""
+  "add %0 = %1, %1, 1"
   [(set_attr "type" "A")])
 
 (define_insn "subdi3"
@@ -1862,31 +1891,20 @@
 ;; doesn't succeed, then this remain a shladd pattern, and will be reloaded
 ;; incorrectly.
 
-(define_insn "*shladd_elim"
+(define_insn_and_split "*shladd_elim"
   [(set (match_operand:DI 0 "register_operand" "=&r")
 	(plus:DI (plus:DI (mult:DI (match_operand:DI 1 "register_operand" "r")
 				   (match_operand:DI 2 "shladd_operand" "n"))
-			  (match_operand:DI 3 "register_operand" "r"))
+			  (match_operand:DI 3 "nonmemory_operand" "r"))
 		 (match_operand:DI 4 "nonmemory_operand" "rI")))]
   "reload_in_progress"
-  "#"
-  [(set_attr "type" "unknown")])
-
-;; ??? Need to emit an instruction group barrier here because this gets split
-;; after md_reorg.
-
-(define_split
-  [(set (match_operand:DI 0 "register_operand" "")
-	(plus:DI (plus:DI (mult:DI (match_operand:DI 1 "register_operand" "")
-				   (match_operand:DI 2 "shladd_operand" ""))
-			  (match_operand:DI 3 "register_operand" ""))
-		 (match_operand:DI 4 "reg_or_14bit_operand" "")))]
+  "* abort ();"
   "reload_completed"
   [(set (match_dup 0) (plus:DI (mult:DI (match_dup 1) (match_dup 2))
 			       (match_dup 3)))
-   (unspec_volatile [(const_int 0)] 2)
    (set (match_dup 0) (plus:DI (match_dup 0) (match_dup 4)))]
-  "")
+  ""
+  [(set_attr "type" "unknown")])
 
 (define_insn "ashrdi3"
   [(set (match_operand:DI 0 "register_operand" "=r")
@@ -2465,6 +2483,42 @@
 
 ;; ::::::::::::::::::::
 ;; ::
+;; :: Counted loop operations
+;; ::
+;; ::::::::::::::::::::
+
+(define_expand "doloop_end"
+  [(use (match_operand 0 "" ""))	; loop pseudo
+   (use (match_operand 1 "" ""))	; iterations; zero if unknown
+   (use (match_operand 2 "" ""))	; max iterations
+   (use (match_operand 3 "" ""))	; loop level
+   (use (match_operand 4 "" ""))]	; label
+  ""
+  "
+{
+  /* Only use cloop on innermost loops.  */
+  if (INTVAL (operands[3]) > 1)
+    FAIL;
+  emit_jump_insn (gen_doloop_end_internal (gen_rtx_REG (DImode, AR_LC_REGNUM),
+					   operands[4]));
+  DONE;
+}")
+
+(define_insn "doloop_end_internal"
+  [(set (pc) (if_then_else (ne (match_operand:DI 0 "ar_lc_reg_operand" "")
+			       (const_int 0))
+		(label_ref (match_operand 1 "" ""))
+		(pc)))
+   (set (match_dup 0) (if_then_else:DI (ne (match_dup 0) (const_int 0))
+			 (match_dup 0)
+			 (plus:DI (match_dup 0) (const_int -1))))]
+  ""
+  "br.cloop.sptk.few %l1"
+  [(set_attr "type" "B")
+   (set_attr "predicable" "no")])
+
+;; ::::::::::::::::::::
+;; ::
 ;; :: Set flag operations
 ;; ::
 ;; ::::::::::::::::::::
@@ -2706,32 +2760,32 @@
 ;; Errata 72 workaround.
 (define_insn "*cmovdi_internal_astep"
   [(set (match_operand:DI 0 "nonimmediate_operand"
-			  "=r,*f,Q,*b,r,*f,Q,*b,r,*f,Q,*b")
+		"=r,*f,Q,*b*d*e,r,*f,Q,*b*d*e,r,*f,Q,*b*d*e")
 	(if_then_else:DI
 	  (match_operator:CC 4 "predicate_operator"
 	    [(match_operand:CC 1 "register_operand"
 			       "c,c,c,c,c,c,c,c,c,c,c,c")
 	     (const_int 0)])
 	  (match_operand:DI 2 "general_operand"
-		    "0,0,0,0,ri*f*b,rO,*f,r,ri*f*b,rO,*f,r")
+		"0,0,0,0,ri*f*b*d*e,rO,*f,r,ri*f*b*d*e,rO,*f,r")
 	  (match_operand:DI 3 "general_operand"
-		    "ri*f*b,rO,*f,r,0,0,0,0,ri*f*b,rO,*f,r")))]
+		"ri*f*b*d*e,rO,*f,r,0,0,0,0,ri*f*b*d*e,rO,*f,r")))]
   "TARGET_A_STEP"
   "* abort ();"
   [(set_attr "predicable" "no")])
 
 (define_insn "*cmovdi_internal"
   [(set (match_operand:DI 0 "nonimmediate_operand"
-			  "=r,m,*f,Q,*b,r,m,*f,Q,*b,r,m,*f,Q,*b")
+		"=r,m,*f,Q,*b*d*e,r,m,*f,Q,*b*d*e,r,m,*f,Q,*b*d*e")
 	(if_then_else:DI
 	  (match_operator:CC 4 "predicate_operator"
 	    [(match_operand:CC 1 "register_operand"
 			       "c,c,c,c,c,c,c,c,c,c,c,c,c,c,c")
 	     (const_int 0)])
 	  (match_operand:DI 2 "general_operand"
-		    "0,0,0,0,0,rim*f*b,rO,rOQ,*f,r,rim*f*b,rO,rOQ,*f,r")
+		"0,0,0,0,0,rim*f*b*d*e,rO,rOQ,*f,r,rim*f*b*d*e,rO,rOQ,*f,r")
 	  (match_operand:DI 3 "general_operand"
-		    "rim*f*b,rO,rOQ,*f,r,0,0,0,0,0,rim*f*b,rO,rOQ,*f,r")))]
+		"rim*f*b*d*e,rO,rOQ,*f,r,0,0,0,0,0,rim*f*b*d*e,rO,rOQ,*f,r")))]
   "! TARGET_A_STEP"
   "* abort ();"
   [(set_attr "predicable" "no")])
