--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -3896,7 +3896,8 @@
 	(plus (match_operand 1 "register_operand" "")
               (match_operand 2 "nonmemory_operand" "")))
    (clobber (reg:CC 17))]
-  "reload_completed"
+  "reload_completed
+   && true_regnum (operands[0]) != true_regnum (operands[1])"
   [(const_int 0)]
   "
 {
@@ -6487,9 +6488,10 @@
 (define_split
   [(set (match_operand 0 "register_operand" "")
 	(ashift (match_operand 1 "register_operand" "")
-                (match_operand:QI 2 "const_int_operand" "")))
+                (match_operand:QI 2 "const248_operand" "")))
    (clobber (reg:CC 17))]
-  "reload_completed"
+  "reload_completed
+   && true_regnum (operands[0]) != true_regnum (operands[1])"
   [(const_int 0)]
   "
 {
